# DIO-Desafio-FastAPI

./: Makefile  alembic.ini  docker_compose.yml  main.py  pyproject.toml  requirements.txt
workout_api/: main.py
workout_api/atleta/: models.py  schemas.py
workout_api/categoria/: models.py  schemas.py
workout_api/centro_treinamento/: models.py  schemas.py
workout_api/contrib/: models.py
