[project]
name = "dio-desafio-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.11.1",
    "annotated-types==0.5.0",
    "anyio==3.7.1",
    "click==8.1.6",
    "fastapi==0.100.1",
    "h11==0.14.0",
    "idna==3.4",
    "mako==1.2.4",
    "markupsafe==2.1.3",
    "sniffio==1.3.0",
    "sqlalchemy==2.0.19",
    "starlette==0.27.0",
    "uvicorn==0.23.1",
]
